<resources>
    <string name="paisa_ok">OK</string>
    <string name="paisa_cancel">Cancel</string>
    <string name="paisa_please_choose">Please choose</string>
    <string name="paisa_please_input">Please input</string>
    <string name="paisa_please_enter_phone">Please enter your phone number</string>
    <string name="paisa_fill_code">Fill in the invitation code</string>
    <string name="paisa_pp_title">Permission Usage Disclosure</string>
    <string name="paisa_pp_tip1">Dear customer, in order to assess your borrowing eligibility and pay your loan faster, we need some permissions to access your phone contacts, SMS, Camera. You can delete your personal information at any time by contacting our Customer Center.</string>
    <string name="paisa_pp_tip2">%s will collect and upload your contact list data (including phone number and name) from your phone to  %s . Phone numbers and names uploaded and transmitted will be used for risk management and anti-fraud checks, and we will not share data with third parties without your permission. Information will only be collected with your consent. These data will be uploaded over a secure connection (https).</string>
    <string name="paisa_pp_tip3">%s will collect and upload your SMS from your phone to  %s . SMS will be used to manage risk and conduct anti-fraud checks, we will not share data with third parties without your permission. Information will only be collected with your consent. These data will be uploaded over a secure connection (https).</string>
    <string name="paisa_pp_tip4">For the security of your account during your use, we need camera permissions to use OCR and facial recognition technology to identify you, not someone else. If you do not enable this permission, you will not be able to use image selection and image related functions</string>
    <string name="paisa_pp_tip5">We need storage permission to save the relevant configuration of the APP.</string>
    <string name="paisa_pp_tip6">All transactions are protected by 128-bit SSL encryption Data will be transmitted and uploaded to the server over a secure connection (https). (%s)</string>
    <string name="paisa_pp_tip7">We collect location information from your device to reduce the risks associated with your account</string>
    <string name="paisa_privacy_policy">Privacy Policy</string>
    <string name="paisa_personal_information">Personal Information</string>
    <string name="paisa_additional_information">Additional Information</string>
    <string name="paisa_bank_certification">Bank Information</string>
    <string name="paisa_next">NEXT</string>
    <string name="paisa_basic_information">Basic Information</string>
    <string name="paisa_first_name">First name</string>
    <string name="paisa_last_name">Last name</string>
    <string name="paisa_pria">Male</string>
    <string name="paisa_wanita">Female</string>
    <string name="paisa_gender">Gender</string>
    <string name="paisa_additional_info_with_quota">Additional info</string>
    <string name="paisa_education">Education</string>
    <string name="paisa_wor_type">Work type</string>
    <string name="paisa_email">Email</string>
    <string name="paisa_facebook_email">Whatsapp account</string>
    <string name="paisa_forever_address">PermanantFinancial Address</string>
    <string name="paisa_PictureLoadModal_first_title_1">Example photo on the front of the ID card</string>
    <string name="paisa_PictureLoadModal_first_title_2">Please upload your front and back of CNIC</string>
    <string name="paisa_PictureLoadModal_first_title_3">Information on the ID card must be clearly visible</string>
    <string name="paisa_please_upload_id_card">Please upload id card</string>
    <string name="paisa_please_confirm_your_last_name">Please confirm your last name</string>
    <string name="paisa_please_confirm_your_first_name">Please confirm your first name</string>
    <string name="paisa_please_choose_gender">Please choose gender</string>
    <string name="paisa_please_choose_education">Please choose education</string>
    <string name="paisa_please_choose_work_type">Please choose work type</string>
    <string name="paisa_please_input_firstname">Please enter first name</string>
    <string name="paisa_please_input_lastname">Please enter last name</string>
    <string name="paisa_please_input_id_no">Please enter your ID card number</string>
    <string name="paisa_please_input_email">Please enter your email</string>
    <string name="paisa_please_input_facebook_account">Please enter Whatsapp account</string>
    <string name="paisa_please_input_full_address">Please enter the full address</string>
    <string name="paisa_please_choose_a_permanent_resident_address">Please choose a permanent resident address</string>
    <string name="paisa_company_information">Company information</string>
    <string name="paisa_contact_tip1">Contact 1 </string>
    <string name="paisa_contact_tip2">Contact 2 </string>
    <string name="paisa_company_name">Company name</string>
    <string name="paisa_company_telephone">Company telephone</string>
    <string name="paisa_company_address">Company address</string>
    <string name="paisa_monthly_salary">Monthly salary</string>
    <string name="paisa_payday">Payday Date</string>
    <string name="paisa_contact_relationship">Relationship</string>
    <string name="paisa_contact_name">Contact person\'s name</string>
    <string name="paisa_contact_contact_way">Contact method</string>
    <string name="paisa_work_type_others">other</string>
    <string name="paisa_work_type_entrepreneur">Entrepreneur</string>
    <string name="paisa_job_address">Address</string>
    <string name="paisa_monthly_income">Monthly income</string>
    <string name="paisa_please_input_company_name">Please enter your company name </string>
    <string name="paisa_please_input_company_phone">Please enter your company telephone number </string>
    <string name="paisa_please_input_monthly_income">Please select monthly income </string>
    <string name="paisa_please_input_companyAdderss">Please enter your company address </string>
    <string name="paisa_please_input_payday">Please enter your payday </string>
    <string name="paisa_please_select_contacter_relationship">Please select the contact person\'s relationship </string>
    <string name="paisa_please_input_contacter_name">Please enter the contact\'s name </string>
    <string name="paisa_please_select_contacter_phone">Please choose the correct phone number </string>
    <string name="paisa_PictureLoadModal_third_title_1">Example of reverse side of ID card </string>
    <string name="paisa_PictureLoadModal_third_title_2">Please upload photo on the back of ID card </string>
    <string name="paisa_PictureLoadModal_third_title_3">Information about back of ID card photo must be clearly seen </string>
    <string name="paisa_bank_auth">Bank Information</string>
    <string name="paisa_bank_name">Bank name</string>
    <string name="paisa_bank_id">Account number</string>
    <string name="paisa_please_choose_a_bank_account">Please choose a bank account</string>
    <string name="paisa_bca_must_ten_digits">The BCA account you provided is wrong</string>
    <string name="paisa_loan_amount">Loan amount</string>
    <string name="paisa_drag_and_try">Drag and try</string>
    <string name="paisa_apply_for_loan_info">Congratulations, you have completed all certification information, please claim your Loan</string>
    <string name="paisa_title_activity_confirm">ConfirmActivity</string>
    <string name="paisa_apply_for_loan">Apply for loan</string>
    <string name="paisa_day"> days</string>
    <string name="paisa_loan_days">Loan due date</string>
    <string name="paisa_service_fee">Service fee(+GST)</string>
    <string name="paisa_interest_fee">Interest</string>
    <string name="paisa_gst_fee">GST</string>
    <string name="paisa_loan_agreement">Loan Agreement</string>
    <string name="paisa_info_sure">Information confirmed</string>
    <string name="paisa_repay_amount">Repayment amount</string>
    <string name="paisa_repayment_repay_end_time">Repayment  due date</string>
    <string name="paisa_repayment_payment_channel">Payment Channels</string>
    <string name="paisa_repayment_bank">PayType</string>
    <string name="paisa_agree_this">I have read and agree</string>
    <string name="paisa_go_to_loan">GO TO LOAN</string>
    <string name="paisa_successful_application">Successful application</string>
    <string name="paisa_successful_application_tip">We will review your application within 2 hours at the earliest.</string>
    <string name="paisa_apply_tip">To ensure that your loan  application is approved as soon as possible, please pay attention to your mobile phone and answer the call. Our auditor will contact you shortly and confirm the informations.</string>
    <string name="paisa_loan_agree_this">Please read and agree to the privacy protection and authorization terms</string>
    <string name="paisa_please_enter_your_phone_number">Please enter your phone number</string>
    <string name="paisa_fill_in_the_invitation_code">Fill in the verification code</string>
    <string name="paisa_obtain_sms_verification_code">obtain SMS verification code</string>
    <string name="paisa_get_voice_verification_code">Get voice verification code</string>
    <string name="paisa_i_have_read_and_agree">I have read and agree</string>
    <string name="paisa_privacy_protection_and_authorization_clauses">Privacy Protection and Authorization Clauses</string>
    <string name="paisa_please_read_and_agree">Please read and agree to the privacy protection and authorization terms</string>
    <string name="paisa_str_face_tip">Facial recognition will be performed \n to further protect your property</string>
    <string name="paisa_str_face">Face Detection</string>
    <string name="paisa_home">Home</string>
    <string name="paisa_user">User</string>
    <string name="paisa_hot_line">Email:</string>
    <string name="paisa_help_center">Help center</string>
    <string name="paisa_your_loan_is_in_progress">Your loan is in progress</string>
    <string name="paisa_the_highest_loan">The highest loan</string>
    <string name="paisa_order_number">order number</string>
    <string name="paisa_loan_term">@string/paisa_number_of_days_to_rollover</string>
    <string name="paisa_present_condition">Present condition</string>
    <string name="paisa_type_of_repayment">Type of repayment</string>
    <string name="paisa_ATM_transfer">ATM Transfer</string>
    <string name="paisa_order_num">Order num:</string>
    <string name="paisa_department_store">Department store</string>
    <string name="paisa_loan_extension">Loan extension</string>
    <string name="paisa_hello">hello,%s</string>
    <string name="paisa_your_current_points">Point : %s</string>
    <string name="paisa_closed_tip">If you click once again, the app will be closed</string>
    <string name="paisa_number_of_days_to_rollover">Loan period</string>
    <string name="paisa_renewal_expiry_time">Due date after extention</string>
    <string name="paisa_number_of_rollovers_used">Times of extention</string>
    <string name="paisa_repayment_va_code">Repayment Link</string>
    <string name="paisa_repayment_guidelines">Repayment Guidelines</string>
    <string name="paisa_rollover_fee">Extention fee</string>
    <string name="paisa_bank_id2">Accounts must match</string>
    <string name="paisa_upload_cnic">Upload CNIC</string>
    <string name="paisa_current_province">Current Province</string>
    <string name="paisa_current_address">Current Address</string>
    <string name="paisa_date_of_issue">Date Of Issue</string>
    <string name="paisa_date_of_birthl">Date of Birth</string>
    <string name="paisa_cnic_number">CNIC Number</string>
    <string name="paisa_wallet_name">Mobile wallet</string>
    <string name="paisa_holder_name">Account holder name</string>
</resources>