<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.userData.fourth.paisa_BankActivityPaisa">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar_common"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <com.paisa.four_u.ui.view.paisa_ProgressView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:page="fourth" />



            <com.paisa.four_u.ui.view.item.paisa_ItemViewShow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tv_text="@string/paisa_bank_auth" />



            <com.paisa.four_u.ui.view.item.paisa_ItemViewSelect
                android:id="@+id/ivs_bank_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title_text="@string/paisa_wallet_name"
                />

            <com.paisa.four_u.ui.view.item.paisa_ItemViewInput
                android:id="@+id/ivi_holder_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:input_title_text="@string/paisa_holder_name"
                />

            <com.paisa.four_u.ui.view.item.paisa_ItemViewInput
                android:id="@+id/ivi_bank_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:input_title_text="@string/paisa_bank_id"
                 />

            <com.paisa.four_u.ui.view.item.paisa_ItemViewInput
                android:id="@+id/ivi_bank_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:input_title_text="@string/paisa_bank_id2"
                />


            <Button
                android:id="@+id/next_btn"
                android:layout_width="320dp"
                android:layout_height="44dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="80dp"
                android:background="@color/colorPrimary"
                android:text="@string/paisa_next"
                android:textColor="@color/white" />


        </LinearLayout>

    </ScrollView>



</LinearLayout>