<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.permission.paisa_PermissionActivityPaisa">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_common"/>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:paddingBottom="30dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paisa_pp_tip1"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="Contact Information(contact list)"
                />

            <TextView
                android:id="@+id/tv_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paisa_pp_tip2"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="SMS"
                />

            <TextView
                android:id="@+id/tv_sms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paisa_pp_tip3"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="Camera"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paisa_pp_tip4"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="Location"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paisa_pp_tip7"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="Storage Permission"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paisa_pp_tip5"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="Data Security"
                />


            <TextView
                android:id="@+id/tv_safe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paisa_pp_tip6"
                />


        </LinearLayout>

    </ScrollView>



    <LinearLayout
        android:id="@+id/pp_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">



        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/paisa_cancel"
            android:background="@color/colorPrimary"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:text="@string/paisa_ok"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />




    </LinearLayout>








</LinearLayout>