<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_select"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">



        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colorPrimaryVariant"
            android:text="@string/paisa_gender"
            />

        <RadioGroup
            android:id="@+id/rg_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rb_Male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/paisa_pria" />

            <RadioButton
                android:id="@+id/rb_FeMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paisa_wanita" />
        </RadioGroup>


    </RelativeLayout>


    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F4F4F4" />


</LinearLayout>