<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@color/colorPrimary"
    android:orientation="horizontal"
    android:gravity="center"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/iv_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/paisa_icon_sign_user_ing" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/paisa_personal_information"
            android:textColor="@color/white"
            android:textSize="13dp" />


    </LinearLayout>

     <ImageView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:src="@mipmap/paisa_icon_line"
        />
    

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/iv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/paisa_icon_sign_contacts" />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/paisa_additional_information"
            android:textColor="@color/white"
            android:textSize="13dp" />


    </LinearLayout>

     <ImageView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:src="@mipmap/paisa_icon_line"
        />
    

<!--    <LinearLayout-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_weight="1"-->
<!--        android:orientation="vertical">-->

<!--        <ImageView-->
<!--            android:id="@+id/iv_photo"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:src="@mipmap/icon_sign_picture" />-->


<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:ellipsize="end"-->
<!--android:layout_marginTop="5dp"-->
<!--            android:gravity="center"-->
<!--            android:maxLines="2"-->
<!--            android:text="@string/personal_information"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="13dp" />-->


<!--    </LinearLayout>-->

<!--    <ImageView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="fill_parent"-->
<!--        android:src="@mipmap/icon_line"-->
<!--        />-->
    


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/iv_bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/paisa_icon_sign_bank" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/paisa_bank_certification"
            android:textColor="@color/white"
            android:textSize="13dp" />


    </LinearLayout>

</LinearLayout>